add Catch2 for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
-cmake_minimum_required(VERSION 3.19)
+cmake_minimum_required(VERSION 3.22)
 
 project(vikunja2 LANGUAGES CXX)
+
+# TODO: fix me, when alpaka is integrated
+set(CMAKE_CXX_STANDARD 20)
+
+option(BUILD_TESTING "Build the testing tree." OFF)
+
+include(cmake/CPM.cmake)
 
 add_library(headers INTERFACE)
 target_include_directories(headers INTERFACE include)
@@ -11,7 +18,11 @@ target_sources(${CMAKE_PROJECT_NAME}
     PRIVATE
     main.cpp
 )
-set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES
-    CXX_STANDARD 20
-)
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE vikunja::vikunja)
+
+# TODO set as option
+if(BUILD_TESTING)
+    message(STATUS "enable testing")
+    enable_testing()
+    add_subdirectory(test)
+endif()
